--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ section{
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: url(bg.png);
+	background: url(bg.jpg);
 	background-size: cover;
 	background-attachment: fixed; 
 }
